@@ -29,7 +29,7 @@ public class SelfdataApiGatewayHelper {
 
 	public ClientResponse datasets(Api api, String token, MultiValueMap<String, String> queryParams)
 			throws AppServiceNotFoundException {
-		String apiHttpMethod = CollectionUtils.isNotEmpty(api.getMethods()) ? api.getMethods().get(0).getValue() : null;
+		String apiHttpMethod = CollectionUtils.isNotEmpty(api.getMethods()) ? api.getMethods().getFirst().getValue() : null;
 		HttpMethod httpMethod = HttpMethod.valueOf(apiHttpMethod); // un HttpMethod est toujours retourné, même si la méthode n'est pas une méthode connue
 		if (!ArrayUtils.contains(HttpMethod.values(), httpMethod)) {
 			throw new IllegalArgumentException(
